--- a/app/views/furimas/show.html.erb
+++ b/app/views/furimas/show.html.erb
@@ -1,6 +1,5 @@
 <%= render partial: "header" %>
 
-<%# 商品の概要 %>
 <div class="item-show">
   <div class="item-box">
     <h2 class="name">
@@ -8,11 +7,11 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag(@exhibit.image, class:"item-box-img") %>
-      <%# 商品が売れている場合は、sold outを表示しましょう %>
+      <% if @exhibit.purchase %>
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
+      <% end %>
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -22,17 +21,15 @@
         <%= @exhibit.shipping_charge.shipping_charge %>
       </span>
     </div>
-
+<% unless @exhibit.purchase %>
   <% if user_signed_in? && current_user.id == @exhibit.user_id %>
     <%= link_to "商品の編集", edit_furima_path, method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
     <%= link_to "削除", furima_path, method: :delete, class:"item-destroy" %>
   <% elsif user_signed_in? %>
-    <%# 商品が売れていない場合はこちらを表示しましょう %>
-    <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
-    <%# //商品が売れていない場合はこちらを表示しましょう %>
+    <%= link_to "購入画面に進む", furima_purchase_shipping_addresses_path(@exhibit) ,class:"item-red-btn"%>
   <% end %>
-
+<% end %>
     <div class="item-explain-box">
       <span><%= "商品説明" %></span>
     </div>
@@ -75,7 +72,6 @@
       </div>
     </div>
   </div>
-  <%# /商品の概要 %>
 
   <div class="comment-box">
     <form>
