--- a/app/views/furimas/show.html.erb
+++ b/app/views/furimas/show.html.erb
@@ -31,7 +31,7 @@
   <% end %>
 <% end %>
     <div class="item-explain-box">
-      <span><%= "商品説明" %></span>
+      <span><%= @exhibit.product_description %></span>
     </div>
     <table class="detail-table">
       <tbody>
