--- a/app/views/purchase_shipping_addresses/index.html.erb
+++ b/app/views/purchase_shipping_addresses/index.html.erb
@@ -31,7 +31,7 @@
 
     <div class="error-alert ">
       <div class="error-message">
-        <%= render 'furimas/error_messages', model: @purchase_shipping_address %> 
+        <%= render 'furimas/error_messages', model: f.object %> 
         </div>
     </div>
 
